[package]
name = "smiley"
version = "0.1.0"
edition = "2021"
authors = ["Hafidh Muqsithanova Sukarno <hafidhmn@gmail.com>"]
license = "BSD-3-Clause"

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
clap-verbosity-flag = "0.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
