[package]
name = "smiley"
version = "0.1.0"
edition = "2021"
authors = ["Hafidh Muqsithanova Sukarno <hafidhmn@gmail.com>"]
rust-version = "1.58.1"
description = "A (yet-another) simple CSS preprocessor"
readme = "README.md"
repository = "https://github.com/snaztoz/smiley"
license = "BSD-3-Clause"
keywords = ["CSS", "preprocessor"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
clap-verbosity-flag = "0.4.0"
env_logger = "0.9.0"
indoc = "1.0.3"
itertools = "0.10.3"
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
